# charcoal

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: cli.rs  error.rs  errors.rs  framework.rs  ir.rs  main.rs  project.rs  standards.rs  sway.rs  sway_ir.rs  tests.rs  translate.rs  utils.rs
src/translate/: assembly.rs  coerce.rs  contracts.rs  enums.rs  expressions.rs  functions.rs  import_directives.rs  mod.rs  statements.rs  storage.rs  structs.rs  symbols.rs  type_definitions.rs  type_names.rs  types.rs  utils.rs
src/translate/expressions/: address_call.rs  array.rs  assignment.rs  binary_unary.rs  conditional.rs  delete.rs  expression_type.rs  function_call.rs  list.rs  literal.rs  literals.rs  member_access.rs  mod.rs  new.rs  operators.rs  parenthesis.rs  power.rs  pre_post.rs  unary.rs  variable.rs
src/translate/statements/: arguments.rs  block.rs  do_while.rs  emit.rs  expression.rs  for.rs  if.rs  mod.rs  return.rs  revert.rs  try_catch.rs  variable.rs  while.rs
test/solidity-by-example/contracts/: Array.sol
test/solidity-erc20/: package.json
test/solidity-erc20/contracts/: ERC20.sol
test/sway-erc20/: Forc.toml
test/sway-erc20/src/: main.sw
test/sway-timelock/src/: main.sw
tests/: test_coverage.rs
tests/code_samples_x/: counter.sol  ec_recover.sol  events.sol  functions.sol  hello_sway.sol  simple_dao.sol  simple_token_sale.sol  simple_vault.sol  struct_mappings.sol  structs.sol  variables.sol
tests/code_samples_x/contracts/: constants.sol  (+5 more)
tests/solidity-by-example/: .gitignore  package.json
tests/sway-timelock/: Forc.toml
(+39 files in other folders)
