[package]
name = "charcoal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
solang-parser = "0.3.3"
structopt = { version = "0.3", default-features = false }
toml = "0.8.10"
serde_yaml = "0.9.32"
sway-types = "0.52.1"

[dev-dependencies]
colorize = "0.1.0"
walkdir = "2.5.0"