[package]
name = "charcoal-v2"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
convert_case = "0.8.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde_yaml = "0.9.33"
sha3 = "0.10.8"
solang-parser = "0.3.4"
toml = "0.8.23"

[dev-dependencies]
colorize = "0.1.0"
walkdir = "2.5.0"
rayon = "1.10.0"
